fix properties editor on small screen

--- a/src/styles/_editor/_properties-editor.sass
+++ b/src/styles/_editor/_properties-editor.sass
@@ -8,6 +8,7 @@
   background: #111
   font-size: 11px
   color: #fafafa
+  overflow: auto
 
   .properties-is-closed &
     right: -281px
